--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   </main>
   <footer class="footer">
     <nav class="footer__navegation">
-      <a class="navegation__link" href=""><img class="link__image" src="./images/facebook-f.svg" alt=""></a>
-      <a class="navegation__link" href=""><img class="link__image" src="./images/twitter.svg" alt=""></a>
-      <a class="navegation__link" href=""><img class="link__image" src="./images/instagram.svg" alt=""></a>
+      <a class="navegation__link" href="#"><img class="link__image" src="./images/facebook-f.svg" alt="Facebook Logo"></a>
+      <a class="navegation__link" href="#"><img class="link__image" src="./images/twitter.svg" alt="Twitter Logo"></a>
+      <a class="navegation__link" href="#"><img class="link__image" src="./images/instagram.svg" alt="Instagram Logo"></a>
     </nav>
     <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
