--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="footer__navegation">
       <a class="navegation__link" href="#" aria-label="Go to the Facebook page"><img class="link__image" src="./images/facebook-f.svg" alt="Facebook Logo"></a>
       <a class="navegation__link" href="#" aria-label="Go to the Twitter page"><img class="link__image" src="./images/twitter.svg" alt="Twitter Logo"></a>
-      <a class="navegation__link" href="#" arial-label="Go to the Instagram page"><img class="link__image" src="./images/instagram.svg" alt="Instagram Logo"></a>
+      <a class="navegation__link" href="#" aria-label="Go to the Instagram page"><img class="link__image" src="./images/instagram.svg" alt="Instagram Logo"></a>
     </nav>
     <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
